lista agrupada de activos done!

--- a/src/app/components/gui/gui.component.html
+++ b/src/app/components/gui/gui.component.html
@@ -1,1 +1,21 @@
-<p>gui works!</p>
+<div class="container-md text-center">
+    <div id="container-general">
+        <div id="titulo" class="text-center">
+            <h1>Myinvest🪙</h1>
+        </div>
+
+        <div id="input-section-dropdown">
+            <!-- <app-dropdown></app-dropdown>  -->
+        </div>
+
+        <!-- Mi Firma -->
+        <div id="firma">
+            <p id="letra">by Niko7even</p>
+            <!--  <app-asset></app-asset>  -->
+        </div>
+        
+    </div>
+
+   <app-listado-inversiones></app-listado-inversiones>
+
+</div>
