--- a/src/app/components/gui/gui.component.html
+++ b/src/app/components/gui/gui.component.html
@@ -1,11 +1,11 @@
 <div class="container-md text-center">
     <div id="container-general">
         <div id="titulo" class="text-center">
-            <h1>Myinvest🪙</h1>
+            <h2 id="proyectos-texto" class="fw-bold text-center mt-5">Myinvest🪙</h2>
         </div>
 
         <div id="input-section-dropdown">
-            <!-- <app-dropdown></app-dropdown>  -->
+            <app-new-inversion></app-new-inversion>
         </div>
 
         <!-- Mi Firma -->
