grafica chart done!

--- a/src/app/components/gui/gui.component.html
+++ b/src/app/components/gui/gui.component.html
@@ -2,6 +2,7 @@
     <div id="container-general">
         <div id="titulo" class="text-center">
             <h2 id="proyectos-texto" class="fw-bold text-center mt-5">Myinvest🪙</h2>
+            <app-grafica></app-grafica>
         </div>
 
         <div id="input-section-dropdown">
