--- a/src/app/components/new-inversion/new-inversion.component.html
+++ b/src/app/components/new-inversion/new-inversion.component.html
@@ -2,7 +2,6 @@
     <!--PROYECTOS-->
     <div class="row justify-content-center">
       <div class="col-md-8">
-        <h2 id="proyectos-texto" class="fw-bold text-center mt-5">Proyectos</h2>
         <p id="descripcion-proyectos" class="fs-6 mt-3 pb-3 text-center">
           Algunos de los proyectos en los que he trabajado implementando diversas tecnologías.
         </p>
@@ -13,7 +12,7 @@
       <div class="col-md-8">
         <div class="d-flex justify-content-center mb-3">
           <button class="button">
-            <i type="button" data-bs-toggle="modal" data-bs-target="#newinversion-modalLabel">Nuevo Proyecto</i>
+            <i type="button" data-bs-toggle="modal" data-bs-target="#newinversion-modalLabel">Agregar Inversion</i>
           </button>
         </div>
         <app-m-new-inversion></app-m-new-inversion>
