--- a/src/app/modal/m-new-inversion/m-new-inversion.component.html
+++ b/src/app/modal/m-new-inversion/m-new-inversion.component.html
@@ -4,7 +4,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="newinversion-modalLabel">1er Expefsfsfriencia</h1>
+        <h1 class="modal-title fs-5" id="newinversion-modalLabel">Agregar una Nueva Inversion!</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -24,7 +24,7 @@
               required>
           </div>
           <button class="btn btn-primary" data-bs-dismiss="modal">
-            Agregar Proyecto
+            Continuar
           </button>
         </form>
       </div>
