--- a/src/app/components/gui/gui.component.html
+++ b/src/app/components/gui/gui.component.html
@@ -11,8 +11,14 @@
 
         <!-- Mi Firma -->
         <div id="firma">
+            <a href="https://github.com/NicolasPozzer" target="_blank">
+                <li class="list-group-item">
+                    <i class="fa-brands fa-github fa-2xl">
+        
+                    </i>
+                </li>
+            </a>
             <p id="letra">by Niko7even</p>
-            <!--  <app-asset></app-asset>  -->
         </div>
         
     </div>
