--- a/src/app/components/listado-inversiones/listado-inversiones.component.css
+++ b/src/app/components/listado-inversiones/listado-inversiones.component.css
@@ -1,3 +1,12 @@
 #promedio-text{
-    color: greenyellow;
+    color: rgb(13, 198, 7);
 }
+
+#inversionesTexts{
+    color: gray;
+}
+
+#inversionSola{
+    font-style: oblique;
+}
+
