--- a/src/app/components/new-inversion/new-inversion.component.html
+++ b/src/app/components/new-inversion/new-inversion.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
-    <!--PROYECTOS-->
+    <!--TEXTO PARA AGREGAR
     <div class="row justify-content-center">
       <div class="col-md-8">
         <p id="descripcion-proyectos" class="fs-6 mt-3 pb-3 text-center">
           Algunos de los proyectos en los que he trabajado implementando diversas tecnologías.
         </p>
       </div>
-    </div>
+    </div>-->
   
     <div class="row justify-content-center">
       <div class="col-md-8">
@@ -16,18 +16,6 @@
           </button>
         </div>
         <app-m-new-inversion></app-m-new-inversion>
-  
-        <div class="container-fluid mx-auto text-center border-celeste">
-          
-          <a href="https://github.com/NicolasPozzer" target="_blank">
-            <li class="list-group-item">
-              <i class="fa-brands fa-github fa-2xl">
-                My Github
-              </i>
-            </li>
-          </a>
-        </div>
-        <br><br><br>
         
       </div>
       
