--- a/src/app/components/gui/gui.component.css
+++ b/src/app/components/gui/gui.component.css
@@ -1,7 +1,3 @@
-.container-md.text-center {
-    margin-top: 33px;
-}
-
 #container-general {
 
     max-width: 750px;
@@ -15,6 +11,7 @@
 }
 
 #titulo {
+    margin-top: -3rem;
     padding: 5%;
 }
 
@@ -28,4 +25,15 @@
 
 #letra{
     margin-right: 3%;
+}
+
+/*GITHUB*/
+.fa-brands.fa-github.fa-2xl{
+    color: black;
+    padding-right: 5px;
+}
+
+.fa-brands.fa-github.fa-2xl:hover{
+    color:#d1d1d1;
+    cursor: pointer;
 }
