deploy app, Done!

--- a/src/app/components/listado-inversiones/listado-inversiones.component.html
+++ b/src/app/components/listado-inversiones/listado-inversiones.component.html
@@ -54,7 +54,7 @@
                         <td>{{ inversion.precioEntrada }}</td>
                         <td>$ {{ inversion.cantInvertida }}</td>
                         <td>
-                            <a href="" type="button" (click)="deleteInversion(inversion.id)">✖</a>
+                            <button type="button" (click)="deleteInversion(inversion.id)">Borrar</button>
                         </td>
                     </tr>
                 </ng-container>
