--- a/src/app/components/gui/gui.component.html
+++ b/src/app/components/gui/gui.component.html
@@ -1,7 +1,7 @@
 <div class="container-md text-center">
     <div id="container-general">
         <div id="titulo" class="text-center">
-            <h2 id="proyectos-texto" class="fw-bold text-center mt-5">Myinvest🪙</h2>
+            <h2 id="proyectos-texto" class="fw-bold text-center mt-5">Myinvest <i class="fa-solid fa-piggy-bank"></i></h2>
             <app-grafica></app-grafica>
         </div>
 
