--- a/src/app/components/listado-inversiones/listado-inversiones.component.html
+++ b/src/app/components/listado-inversiones/listado-inversiones.component.html
@@ -24,7 +24,7 @@
             <!-- Iterar sobre cada activo -->
             <ng-container *ngFor="let activo of listaAgrupados; let i = index">
                 <tr>
-                    <th scope="row"><h4>🪙</h4></th>
+                    <th scope="row"><h4><i class="fa-solid fa-coins"></i></h4></th>
                     <td id="inversionSola"><h4>{{ activo.nombre.toUpperCase() }}</h4></td>
                     <td id="inversionSola">
                         <!-- Buscar el total por moneda correspondiente al activo actual -->
